...
            const SizedBox(width: 20),
            Expanded(
              child: Column(
                crossAxisAlignment: CrossAxisAlignment.start,
                children: [
                   Text(
                     'Manage Portfolio',
                     style: GoogleFonts.outfit(
                       color: theme.textTheme.titleLarge?.color, 
                       fontSize: 18, 
                       fontWeight: FontWeight.bold
                     ),
                   ),
...
